[package]
name = "glacier-stream"
version = "1.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.11"
aws-sdk-glacier = "1.87.0"
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-mpmc = "0.2.4"
